service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: doodlemesh
spec:
  selector:
    app: backend
  ports:
    - name: http-backend
      port: 80
      targetPort: 3002
